--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2632,57 +2632,135 @@ a:hover {
     border-radius: 2px 0 0 2px;
   }
 
-  .slider_option {
-    position: relative;
-    margin: 10px auto;
-    width: 160px;
-    font-size: 18px;
-  }
-  .slider-modals{
-    max-width: 90%;
-    position: relative;
-    margin: auto;
-    height: 300px;
+
+
+
+  #slideshow{
+	line-height: 1;
+	font-family:Consolas, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", Monaco, "Courier New", monospace;
+  position: relative;
+  height: 100vh;
+  width: 100vw;
 }
-/* Картинка масштабируется по отношению к родительскому элементу */
-.slider-modals .item img {
-    object-fit: cover;
-    width: 100%;
-    height: 300px;
+.control {
+	width: 100%;
+	height: calc(100% - 36px);
+	position: absolute;
+	top:36px;
+	margin: 0;
+	z-index: 99;
+  display: block;
 }
-/* Кнопки вперед и назад */
-.slider-modals .previous, .slider-modals .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    margin-top: -22px;
-    padding: 16px;
-    color: white;
-    font-weight: bold;
-    font-size: 16px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
+.control > button {
+	width: 16.7%;
+	height: calc(100% - 36px);
+	opacity: 1;
+	color:#212121;
+  background-color: transparent;
+	border: 0;
+  cursor: pointer;
+  font-size: 50vh
 }
-.slider-modals .next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
+#previous{
+  float: left;
 }
-/* При наведении на кнопки добавляем фон кнопок */
-.slider-modals .previous:hover,
-.slider-modals .next:hover {
-    background-color: rgba(0, 0, 0, 0.2);
+#next{
+  float: right;
 }
-/* Анимация слайдов */
-.slider-modals .item {
-    animation-name: fade;
-    animation-duration: 1.5s;
+#slides {
+	padding: 0;
+	margin: 0;
+	background: #000;
+	overflow: hidden
 }
-@keyframes fade {
-    from {
-        opacity: 0.4
-    }
-    to {
-        opacity: 1
-    }
+#slides > li {
+	position: absolute;
+	clear:both;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	width: 100%;
+	height: 100%;
+	margin: 0 auto;
+	overflow: hidden;
+	opacity: 0;
+	overflow: hidden;
+	font-size: 50vh;
+	line-height: 100vh;
+	text-align: center;
+	color:#212121;
+}
+#slides li:first-child {
+	background: #F44336
+}
+#slides li:nth-child(2) {
+	background: #E91E63
+}
+#slides li:nth-child(3) {
+	background: #9C27B0
+}
+#slides li:nth-child(4) {
+	background: #673AB7
+}
+#slides li:nth-child(5) {
+	background: #3F51B5
+}
+#slides li:last-child {
+	background: #2196F3
+}
+#slides li.slideActive {
+	z-index: 2;
+	opacity: 1;
+	transition: 1s;
+}
+#first {
+	background: #F44336
+}
+#second {
+	background: #E91E63
+}
+#third {
+	background: #9C27B0
+}
+#fourth {
+	background: #673AB7
+}
+#fifth {
+	background: #3F51B5
+}
+#sixth {
+	background: #2196F3
+}
+.pager ul {
+	display: table;
+	width: 100%;
+  position: absolute;
+  z-index: 999
+}
+.pager ul li {
+display: table-cell;
+ line-height: 36px;
+ text-align: center;
+ color: #fff;
+ text-decoration: none;
+ cursor:pointer;
+}
+.progressbar{
+	position:absolute;
+	bottom: 0;
+	width:100%;
+	height:36px;
+	background: none;
+	z-index: 3;
+}
+.progress{
+	width:0;
+	height:36px;
+	-webkit-animation: progress 10s infinite;
+	background:#FFEB3B;
+}
+@-webkit-keyframes progress {
+    0% {width: 0%;}
+    100% {width: 100%;}
 }
