--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2597,170 +2597,9 @@ a:hover {
     color: #585858;
     text-decoration: none;
 }
-.mySlides {
-    display: none;
-}
-
-  a.control_prev, a.control_next {
-    position: absolute;
-    top: 40%;
-    z-index: 999;
-    display: block;
-    padding: 4% 3%;
-    width: auto;
-    height: auto;
-    background: #2a2a2a;
-    color: #fff;
-    text-decoration: none;
-    font-weight: 600;
-    font-size: 18px;
-    opacity: 0.8;
-    cursor: pointer;
-  }
-
-  a.control_prev:hover, a.control_next:hover {
-    opacity: 1;
-    -webkit-transition: all 0.2s ease;
-  }
-
-  a.control_prev {
-    border-radius: 0 2px 2px 0;
-  }
-
-  a.control_next {
-    right: 0;
-    border-radius: 2px 0 0 2px;
-  }
 
 
-
-
-  #slideshow{
-	line-height: 1;
-	font-family:Consolas, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", Monaco, "Courier New", monospace;
-  position: relative;
-  height: 100vh;
-  width: 100vw;
-}
-.control {
-	width: 100%;
-	height: calc(100% - 36px);
-	position: absolute;
-	top:36px;
-	margin: 0;
-	z-index: 99;
-  display: block;
-}
-.control > button {
-	width: 16.7%;
-	height: calc(100% - 36px);
-	opacity: 1;
-	color:#212121;
-  background-color: transparent;
-	border: 0;
-  cursor: pointer;
-  font-size: 50vh
-}
-#previous{
-  float: left;
-}
-#next{
-  float: right;
-}
-#slides {
-	padding: 0;
-	margin: 0;
-	background: #000;
-	overflow: hidden
-}
-#slides > li {
-	position: absolute;
-	clear:both;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	width: 100%;
-	height: 100%;
-	margin: 0 auto;
-	overflow: hidden;
-	opacity: 0;
-	overflow: hidden;
-	font-size: 50vh;
-	line-height: 100vh;
-	text-align: center;
-	color:#212121;
-}
-#slides li:first-child {
-	background: #F44336
-}
-#slides li:nth-child(2) {
-	background: #E91E63
-}
-#slides li:nth-child(3) {
-	background: #9C27B0
-}
-#slides li:nth-child(4) {
-	background: #673AB7
-}
-#slides li:nth-child(5) {
-	background: #3F51B5
-}
-#slides li:last-child {
-	background: #2196F3
-}
-#slides li.slideActive {
-	z-index: 2;
-	opacity: 1;
-	transition: 1s;
-}
-#first {
-	background: #F44336
-}
-#second {
-	background: #E91E63
-}
-#third {
-	background: #9C27B0
-}
-#fourth {
-	background: #673AB7
-}
-#fifth {
-	background: #3F51B5
-}
-#sixth {
-	background: #2196F3
-}
-.pager ul {
-	display: table;
-	width: 100%;
-  position: absolute;
-  z-index: 999
-}
-.pager ul li {
-display: table-cell;
- line-height: 36px;
- text-align: center;
- color: #fff;
- text-decoration: none;
- cursor:pointer;
-}
-.progressbar{
-	position:absolute;
-	bottom: 0;
-	width:100%;
-	height:36px;
-	background: none;
-	z-index: 3;
-}
-.progress{
-	width:0;
-	height:36px;
-	-webkit-animation: progress 10s infinite;
-	background:#FFEB3B;
-}
-@-webkit-keyframes progress {
-    0% {width: 0%;}
-    100% {width: 100%;}
+.carousel .item img {
+    width: 100%;
+    height: 100%;
 }
