--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1800,6 +1800,9 @@ a:hover {
 }
 /*******mediasquery **********/
 @media only screen and (max-width: 600px) {
+    .number{
+        display: none;
+    }
     .card-flip {
         height: 500px;
     }
@@ -1841,7 +1844,7 @@ a:hover {
     }
     .main-mask {
         width: 89%;
-        height: 180px;
+        height: 260px;
     }
     figure img {
         max-width: 80%;
@@ -1981,13 +1984,13 @@ a:hover {
         font-size: 10px;
     }
     [type="button"] {
-        top: 48%;
+        top: 38%;
     }
     .slick-next {
-        margin-right: 17%;
+        margin-right: 13%;
     }
     .slick-prev {
-        margin-left: 15%;
+        margin-left: 9%;
     }
     .titles-slider {
         top: 45%;
@@ -2233,11 +2236,9 @@ a:hover {
     .bg-dark {
         height: 80vh;
     }
-    .main-video {
-        padding: 7rem 0;
-    }
+
     .home-main {
-        height: -webkit-fill-available;
+        height: 70vh;
     }
     .bg-light_folder {
         background-image: url(../img/bg_xs.png);
