--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -95,7 +95,7 @@ h1 {
     justify-content: flex-end;
     list-style: none;
     margin: 0;
-    padding: 1rem 4rem;
+    padding: 1rem 1rem;
 }
 
 .nav {
@@ -119,8 +119,8 @@ h1 {
 
 .menu-link {
     color: #1d1e1c;
-    font-size: 11px;
-    margin-left: 1rem;
+    font-size: 10px;
+   
     -webkit-transition: all 0.25s ease-out;
     transition: all 0.25s ease-out;
     text-decoration: none;
@@ -130,12 +130,7 @@ h1 {
     letter-spacing: 1px;
     text-transform: uppercase;
 }
-.menu-link:hover,
-.menu-link:focus,
-.menu-link:active {
-    color: #1d1e1c;
-    border-bottom: 1px solid #121212;
-}
+
 
 .input-toggler:checked ~ .sidebar {
     transform: translateX(0%);
@@ -330,12 +325,22 @@ h1 {
     animation: motion-blur 0.1s linear forwards,
         motion-blur 0.4s linear reverse forwards 0.1s;
 }*/
+.menu li {
+   
+    border-bottom: 1px solid transparent;
+    margin-right: 1.5rem;
+}
+.menu li:hover
+ {
+    color: #1d1e1c;
+    border-bottom: 1px solid #121212;
+}
 .main-logo {
     position: absolute;
     z-index: 1;
     cursor: pointer;
     left: 4%;
-    top: 55px;
+    top: 38px;
 }
 .main-logo img {
     width: 170px;
@@ -1663,8 +1668,8 @@ a:hover {
     height: 0;
 }
 .main-mask {
-    width: 100%;
-    height: 430px;
+    width: auto;
+    height: 100%;
 
     background-size: cover;
     -webkit-clip-path: url(#my-clip-path);
@@ -1673,7 +1678,7 @@ a:hover {
 }
 .video-mask {
     width: 50%;
-    height: 450px;
+    height: 30rem;
     transition: 0.8s;
     display: flex;
     justify-content: center;
@@ -1796,764 +1801,6 @@ a:hover {
         font-size: 14px;
         line-height: 16px;
         width: 100%;
-    }
-}
-/*******mediasquery **********/
-@media only screen and (max-width: 600px) {
-    .number{
-        display: none;
-    }
-    .card-flip {
-        height: 500px;
-    }
-    .card-flip__flipper {
-        transform: rotateY(180deg);
-    }
-    .main-director {
-        margin-top: 6rem !important;
-    }
-    .active-films-slider {
-        display: none !important;
-    }
-    .name-info h3 {
-        font-size: 17px;
-    }
-    .main-info .info {
-        max-width: 100%;
-        transform: none;
-        padding-right: 0;
-        padding: 1rem;
-        padding-top: 0;
-    }
-    .active-xs {
-        transform: translate(0px, 273px) !important;
-    }
-    .video-mask {
-        width: 100%;
-        height: auto;
-        transition: 0.8s;
-    }
-    .custom-popup__holder {
-        width: 96%;
-        height: auto;
-        padding: 0 !important;
-    }
-    .custom-popup__content {
-        padding: 0 !important;
-        margin: 0 !important;
-    }
-    .main-mask {
-        width: 89%;
-        height: 260px;
-    }
-    figure img {
-        max-width: 80%;
-    }
-    body,
-    html {
-        overflow-x: hidden;
-    }
-    .name-gallery p {
-        font-size: 1.2rem;
-    }
-    .name-gallery {
-        margin-left: 0;
-    }
-    /***********************menu******************/
-
-    .menu-toggler {
-        position: absolute;
-        right: 0px;
-        top: 0px;
-        width: 80px;
-        height: 90px;
-        background: transparent;
-        z-index: 100;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        cursor: pointer;
-    }
-
-    .menu-toggler-line {
-        width: 60%;
-        height: 3px;
-        background: #000;
-        margin: 0 0 10px 0px;
-        position: relative;
-        transition: all 0.4s ease-out;
-    }
-    .menu {
-        flex-direction: column;
-        opacity: 1 !important;
-    }
-
-    .input-toggler:checked ~ .menu-toggler .menu-toggler-line {
-        top: 5px;
-        translatey: 100px;
-        transform: rotate(45deg);
-    }
-
-    .input-toggler:checked ~ .menu-toggler .menu-toggler-line:nth-child(2) {
-        display: none;
-    }
-
-    .input-toggler:checked ~ .menu-toggler .menu-toggler-line:nth-child(3) {
-        top: -5px;
-        translatey: 10;
-        transform: rotate(135deg);
-    }
-
-    .nav {
-        width: 100%;
-        height: 100%;
-        background: rgba(0, 0, 0, 0.8);
-    }
-    .nav ul {
-        width: 100%;
-    }
-    .nav ul li {
-        width: 100%;
-        text-align: center;
-    }
-    .nav ul li a {
-        display: inline-block;
-        font-size: 36px;
-        color: #fff;
-        text-transform: uppercase;
-    }
-
-    .sidebar {
-        position: absolute;
-        top: 0;
-        height: 100vh;
-        width: 100%;
-
-        opacity: 0.5;
-
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        transform: translateX(-100%);
-
-        transition: all 0.4s ease-out;
-        background: white;
-        z-index: 1;
-    }
-    .menu-link {
-        color: #1d1e1c;
-        font-size: 18px;
-        line-height: 3;
-    }
-
-    .menu-link:hover,
-    .menu-link:focus,
-    .menu-link:active {
-        color: gray;
-    }
-
-    .input-toggler:checked ~ .sidebar {
-        transform: translateX(0%);
-        opacity: 0.98;
-    }
-    .main-logo {
-        left: 6%;
-        top: 10px;
-    }
-    .main-logo img {
-        width: 102px;
-    }
-    .bg-light {
-        align-items: center;
-        justify-content: center;
-        justify-items: center;
-        display: flex;
-    }
-    .slick-slide {
-        padding: 0;
-    }
-    .slick-slide img {
-        max-width: 100%;
-    }
-    .titles-slider p {
-        font-size: 12px;
-    }
-    .titles-slider span {
-        font-size: 10px;
-    }
-    [type="button"] {
-        top: 38%;
-    }
-    .slick-next {
-        margin-right: 13%;
-    }
-    .slick-prev {
-        margin-left: 9%;
-    }
-    .titles-slider {
-        top: 45%;
-        margin-left: -1rem;
-        max-width: 62%;
-        line-height: 1.5;
-        top: 52%;
-        left: 21%;
-    }
-    footer {
-        padding: 0 0.5rem !important;
-        align-items: center;
-        z-index: 1;
-        flex-direction: column;
-        text-align: center;
-    }
-    .main-director-names {
-        font-size: 20px;
-
-        transform: translateX(0rem) !important;
-    }
-    .main-panel {
-        transition: 0.6s;
-        display: flex;
-        flex-direction: column-reverse;
-    }
-    .main-info {
-        transform: translateX(0) !important;
-        padding: 0px;
-    }
-    .name-info {
-        position: relative;
-        transform: none;
-        top: 0;
-    }
-    .panel {
-        width: 100%;
-        height: 0vh;
-        position: relative;
-    }
-    .main-galeria {
-        padding: 1rem;
-
-        transform: translate(0px, 28px);
-    }
-    .main-panel:nth-child(1) .panel {
-        opacity: initial;
-        z-index: 1;
-        transform: translateX(0);
-        height: 0;
-        overflow: hidden;
-    }
-    .bg-light_folder {
-        background-size: 200%;
-    }
-    .container-gallery {
-        grid-template-columns: 1fr;
-        padding: 0 1rem;
-    }
-    .tabs-gallery span,
-    .tabs-gallery2 span {
-        font-size: 1rem;
-        padding: 0;
-    }
-    .no_height {
-        height: auto;
-        height: -webkit-fill-available;
-        overflow: auto;
-    }
-    .tabs {
-        margin-top: 7rem;
-    }
-    .tabs ul {
-        padding-left: 0;
-
-        position: relative !important;
-        right: auto;
-        width: 100%;
-        text-align: center;
-        margin: 0;
-        flex-direction: unset;
-        justify-content: center;
-        gap: 2rem;
-        margin-bottom: 7rem;
-    }
-    /*******************************************/
-    .marco::after {
-        margin-left: auto;
-        width: 346px;
-        top: -1%;
-        left: 0;
-        height: 340px;
-    }
-    .main-home {
-        margin-bottom: 0;
-    }
-    body {
-        background: #f4eadf;
-    }
-    .pswp__img {
-        top: 24%;
-    }
-    .marco::after {
-        z-index: 1;
-    }
-    .slider-films {
-        max-width: 100%;
-        /* transform: translate(16rem, 3rem); */
-    }
-    .slider-films .slick-slide img {
-        height: 450px;
-        padding: 2rem;
-        width: 100%;
-    }
-    .end {
-        padding-right: 0rem;
-    }
-    .slider-films .slick-next {
-        right: 5%;
-    }
-    .film-grid {
-        padding-left: 2rem;
-        padding-right: 2rem;
-        flex-direction: column;
-        flex-wrap: initial;
-        margin-top: 4rem;
-        height: -webkit-fill-available;
-    }
-    .film-grid_item:nth-child(1) {
-        width: 100%;
-        overflow-y: unset;
-    }
-    .film-grid_item:nth-child(2) {
-        width: 100%;
-        padding-left: 0;
-    }
-    .active-films {
-        overflow: auto;
-        height: -webkit-fill-available;
-    }
-    .arrow {
-        bottom: 16px;
-        position: fixed;
-        top: initial;
-        left: 85%;
-        right: 0;
-        height: 50px;
-        width: 52px;
-        background-size: 14px;
-        background-position: center;
-    }
-    .arrow a {
-        border: 1px solid white;
-        width: 50px;
-        height: 50px;
-        padding: 1rem;
-        text-align: center;
-        display: flex;
-        border-radius: 50%;
-    }
-    .fancy-hover__image {
-        max-width: 66%;
-        margin-top: 4rem;
-    }
-    .card-flip__content--front {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .card-flip__content--back p {
-        margin-top: 6rem;
-        overflow: scroll;
-    }
-    .team {
-        position: relative;
-        align-items: center;
-        justify-content: center;
-        flex-wrap: initial;
-    }
-    .card-flip__content--back:hover .team-item:nth-child(1) {
-        transform: none;
-    }
-    .team-item:nth-child(3),
-    .team-item:nth-child(2),
-    .team-item:nth-child(4) {
-        transform: none !important;
-    }
-    .card-flip__content--back {
-        background-size: 85% !important;
-        background-repeat: no-repeat;
-        background-position: center;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        padding: 16px;
-        height: 517px;
-        display: flex;
-        flex-direction: column;
-    }
-    .contacto-item {
-        width: 100%;
-        margin-bottom: 4rem;
-    }
-    .contacto p,
-    .contacto a {
-        font-size: 0.9rem;
-    }
-    .contacto {
-        height: -webkit-fill-available;
-        margin-top: 9rem;
-    }
-    .form {
-        background-size: contain;
-        margin: 0.5rem;
-    }
-    .content-form h3 {
-        font-size: 1rem;
-
-        margin-bottom: 1rem;
-    }
-    .content-form {
-        width: 100%;
-        padding: 0 1rem;
-    }
-    .form label {
-        font-size: 0.9rem;
-    }
-    .ml-27 {
-        margin-left: 1rem !important;
-    }
-    .content-form::before {
-        display: none;
-    }
-    .form input {
-        margin-left: 0rem;
-    }
-    .form .mb-2 {
-        margin-bottom: 1rem;
-    }
-    .main-private {
-    }
-    .bg-dark {
-        height: 80vh;
-    }
-
-    .home-main {
-        height: 70vh;
-    }
-    .bg-light_folder {
-        background-image: url(../img/bg_xs.png);
-
-        top: 21px;
-        background-size: cover !important;
-    }
-    .main-panel .panel-active {
-        overflow: scroll;
-        height: 50vh !important;
-        opacity: 1 !important;
-    }
-    .main-director {
-        margin-top: 4rem;
-        padding: 0 1rem;
-    }
-    .txt-title {
-        transform: none !important;
-    }
-}
-/*tablet*/
-@media (min-width: 992px) and (max-width: 1199px) {
-    .txt-title {
-        /*     transform: translate(62.5%, 19rem) !important;*/
-        /*    transform: translate(65.5%, 26rem) !important;*/
-        font-size: 10px;
-    }
-    .main-director-names {
-        font-size: 14px;
-        line-height: 1;
-        /*
-        transform: translate(62.5%, 1163%) !important;*/
-        transform: translate(65.5%, 26rem) !important;
-    }
-    .name-info {
-        /* transform: translateX(57.5%) translateY(-8.35vw) rotate(90deg);*/
-        transform: translateX(64.5%) translateY(-5.35vw) rotate(90deg);
-    }
-    .main-info .info {
-        transform: translate(8rem, 0px);
-
-        padding-right: 5rem;
-    }
-    .panel {
-        /*  width: calc(60% - 4.05vw);*/
-    }
-    .name-info h3 {
-        font-size: 22px;
-    }
-    .main-info .info {
-        transform: translate(1rem, 0px);
-    }
-    .open {
-        transform: translateX(281px) !important;
-    }
-    .bg-light_folder {
-        background-size: 200%;
-    }
-    .menu {
-        padding: 1rem 1rem;
-    }
-    .main-logo {
-        top: 40px;
-    }
-    .main-logo img {
-        width: 120px;
-    }
-    .slick-prev {
-        margin-left: 9%;
-    }
-    .slick-next {
-        margin-right: 13%;
-    }
-    .titles-slider {
-        left: 18%;
-    }
-}
-/*
-@media (min-width: 1400px) {
-    .bg-light_folder {
-        background-size: 150%;
-    }
-    .main-director-names {
-        transform: translate(65.5%, 2900%) !important;
-    }
-    .txt-title {
-        transform: translate(65.5%, 2900%) !important;
-    }
-    .main-galeria {
-        transform: translateX(-10px);
-    }
-    .open {
-        transform: translateX(630px) !important;
-    }
-    .main-info .info {
-        max-width: 600px;
-        transform: translate(35rem, 0px);
-    }
-    .name-info {
-        transform: translateX(27.8vw) translateY(-3.35vw) rotate(90deg);
-    }
-}*/
-@media (min-width: 992px) and (max-width: 1199px) {
-    .video-mask {
-        width: 100%;
-        height: 450px;
-        transition: 0.8s;
-    }
-}
-
-@media (max-width: 1024px) {
-}
-@media only screen and (device-width: 1280px) and (device-height: 500px) {
-    .open {
-        transform: translateX(390px) !important;
-    }
-    .main-info .info {
-        max-width: 380px;
-        transform: translate(23rem, 0px);
-    }
-    .name-info {
-        transform: translateX(66.9%) translateY(-5.35vw) rotate(90deg);
-    }
-    .main-director-names {
-        /*   transform: translate(65.5%, 1900%) !important;*/
-    }
-    .txt-title {
-        transform: translate(65.5%, 31rem) !important;
-    }
-
-    .tabs-gallery2 span {
-        font-size: 1.2rem;
-    }
-}
-@media only screen and (device-width: 1280px) and (device-height: 800px) {
-    .open {
-        transform: translateX(390px) !important;
-    }
-    .main-info .info {
-        max-width: 380px;
-        transform: translate(23rem, 0px);
-    }
-    .name-info {
-        transform: translateX(41.9%) translateY(-5.35vw) rotate(90deg);
-    }
-    .main-director-names {
-        /*   transform: translate(65.5%, 1900%) !important;*/
-    }
-    .txt-title {
-        transform: translate(65.5%, 31rem) !important;
-    }
-
-    .tabs-gallery2 span {
-        font-size: 1.2rem;
-    }
-}
-@media only screen and (device-width: 1280px) and (device-height: 900px) {
-    .open {
-        transform: translateX(390px) !important;
-    }
-    .main-info .info {
-        max-width: 380px;
-        transform: translate(23rem, 0px);
-    }
-    .name-info {
-        transform: translateX(40.9%) translateY(-5.35vw) rotate(90deg);
-    }
-    .main-director-names {
-        /*   transform: translate(65.5%, 1900%) !important;*/
-    }
-    .txt-title {
-        transform: translate(65.5%, 31rem) !important;
-    }
-
-    .tabs-gallery2 span {
-        font-size: 1.2rem;
-    }
-}
-
-@media only screen and (device-width: 1280px) and (device-height: 700px) {
-    .name-info {
-        transform: translateX(52.5%) translateY(-5.35vw) rotate(90deg);
-    }
-}
-@media only screen and (device-width: 1024px) and (min-height: 500px) {
-    .main-director-names {
-        font-size: 20px;
-
-        /*   transform: translate(65.5%, 1100%) !important;*/
-    }
-    .txt-title {
-        transform: translate(65.5%, 18rem) !important;
-    }
-    .panel {
-        width: calc(60% - 4.05vw);
-    }
-    .open {
-        transform: translateX(342px) !important;
-    }
-    .main-info .info {
-        transform: translate(13rem, 0px);
-        max-width: 390px;
-    }
-    .name-info h3 {
-        font-size: 20px;
-    }
-    .name-info {
-        transform: translateX(49.5%) translateY(-5.35vw) rotate(90deg);
-    }
-    .tabs-gallery span {
-        font-size: 1rem;
-    }
-    .marco::after {
-        height: 340px;
-        width: 346px;
-    }
-    figure img {
-        max-width: 72%;
-    }
-    .name-gallery {
-        margin-left: 0;
-    }
-    .name-gallery p {
-        font-size: 1.5rem;
-    }
-    .slider-films {
-        max-width: 49rem;
-        /* transform: translate(16rem, 3rem); */
-    }
-    .slider-films .slick-slide img {
-        height: 330px;
-    }
-    .main-logo img {
-        width: 135px;
-    }
-    .film-grid {
-        padding-left: 13rem;
-        padding-right: 1rem;
-    }
-    .film-grid_item .title-film {
-        font-size: 1.2rem;
-    }
-    .film-grid_item p {
-        font-size: 9px;
-    }
-}
-
-@media only screen and (device-width: 1440px) and (min-height: 649px) {
-    .main-director-names {
-        /*   transform: translate(65.5%, 1414%) !important;*/
-    }
-    .name-info {
-        transform: translateX(62.1%) translateY(-5.35vw) rotate(90deg);
-    }
-
-    .open {
-        transform: translateX(455px) !important;
-    }
-    .main-info .info {
-        max-width: 484px;
-        transform: translate(25rem, 0px);
-    }
-}
-
-@media only screen and (width: 1440px) and (height: 900px) {
-    .main-director-names {
-        /* transform: translate(65.5%, 2320%) !important;*/
-    }
-    .txt-title {
-        transform: translate(65.5%, 2323%) !important;
-    }
-    .open {
-        transform: translateX(450px) !important;
-    }
-    .main-info .info {
-        max-width: 470px;
-        transform: translate(25.1rem, 0px);
-    }
-    .name-info {
-        transform: translateX(44.5%) translateY(-4.35vw) rotate(90deg);
-    }
-}
-@media only screen and (width: 1280px) and (height: 950px) {
-    .main-director-names {
-        /* transform: translate(65.5%, 2512%) !important;*/
-    }
-    .txt-title {
-        transform: translate(65.5%, 41rem) !important;
-    }
-    .open {
-        transform: translateX(393px) !important;
-    }
-    .name-info {
-        transform: translateX(38.5%) translateY(-5.35vw) rotate(90deg);
-    }
-    .main-director-names {
-        font-size: 23px;
-    }
-}
-@media only screen and (width: 1280px) and (height: 800px) {
-    .main-director-names {
-        /*  transform: translate(65.5%, 2512%) !important;*/
-    }
-    .txt-title {
-        transform: translate(65.5%, 32rem) !important;
-    }
-    .open {
-        transform: translateX(393px) !important;
-    }
-    .name-info {
-        /*   transform: translateX(45.9%) translateY(-5.35vw) rotate(90deg);*/
-    }
-    .main-director-names {
-        font-size: 23px;
-        /*  transform: translate(65.5%, 1955%) !important;*/
     }
 }
 
