--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -234,8 +234,8 @@ h1 {
     /* transform: translate(-12%, 6%); */
     font-family: "VanderKeur";
     font-size: 0.9rem;
-    left: 72%;
-    top: 21px;
+    left: 72.5%;
+    top: 15px;
 }
 .slider .slick-slide {
     /*padding: 0 100px;*/
@@ -331,7 +331,7 @@ video::-webkit-media-controls-fullscreen-button {
 }*/
 .menu li {
     border-bottom: 1px solid transparent;
-    margin-right: 1.5rem;
+    margin-right: 1rem;
 }
 .menu li:hover {
     color: #1d1e1c;
@@ -345,7 +345,7 @@ video::-webkit-media-controls-fullscreen-button {
     top: 27px;
 }
 .main-logo img {
-    width: 155px;
+    width: 130px;
     height: 100%;
 }
 .main-video {
@@ -376,9 +376,9 @@ footer {
 }
 footer p,
 footer a {
-    font-size: 9px;
+    font-size: 8px;
     color: #1d1e1c;
-    letter-spacing: 1px;
+   
     font-family: "VanderKeur";
     margin-bottom: 0;
 }
@@ -466,7 +466,7 @@ footer a:nth-child(1) {
     position: absolute;
     left: calc(89% - 14.05vw);
     bottom: 26%;
-    font-weight: 600;
+    font-weight: 500;
 }
 
 img {
@@ -496,7 +496,7 @@ img {
     height: 100vh;
     max-height: 100vh;
     position: absolute;
-    transform: translateX(32px);
+    transform: translateX(41px);
     box-shadow: 0px 0px 15px #0202026e;
     padding-right: 0;
     transition: 0.6s;
@@ -571,13 +571,14 @@ img {
     /* position: absolute; */
     /* left: 0; */
     /* right: 0; */
-    top: 225px;
-    justify-content: center;
+    top: 350px;
+
 }
 .name-info h3 {
     font-family: "DrukText";
-    font-size: 25px;
+    font-size: 24px;
     color: #000;
+    margin: 0;
 }
 .main-info .info {
     /* padding: 0 6rem; */
@@ -605,8 +606,8 @@ img {
 
 .info p {
     font-family: "VanderKeur";
-    font-size: 10px;
-    line-height: 1.9;
+    font-size: 9px;
+    line-height: initial;
     color: #1d1e1c;
     letter-spacing: 1px;
 }
@@ -1752,8 +1753,8 @@ a:hover {
     cursor: pointer;
 }
 .video-mask {
-    width: 50%;
-    height: 30rem;
+    width: 45%;
+    height: 24rem;
     transition: 0.8s;
     display: flex;
     justify-content: center;
