--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -191,7 +191,7 @@ h1 {
 .item-private figure img,
 .item-private video {
     max-width: 100%;
-    height: 400px;
+    height: 550px;
     width: 100%;
     object-fit: cover;
     object-position: center;
@@ -1603,7 +1603,7 @@ figure img {
 }
 .active-films {
     opacity: 1;
-    height: 100vh;
+    /* height: 100vh; */
     display: block;
 }
 .active-films-slider {
